--- a/thanks.html
+++ b/thanks.html
@@ -6,6 +6,8 @@
   <title>Thank You | Popular Cars Ecuador</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="images/logo.ico" type="image/x-icon" />
+
 </head>
 
 <body>
