--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Contact | Popular Cars Ecuador</title>
+  <link rel="icon" href="images/logo.ico" type="image/x-icon" />
 
   <!-- Meta -->
   <meta name="description" content="Send us your questions about buying a car in Ecuador." />
